# libadblockplus-android

./: .gitignore  .gitlab-ci.yml  .gitmodules  .hgignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  build.gradle  dependencies  ensure_dependencies.py  gitlab-ci.readme.md  gradle.properties  pom.xml  settings.gradle
adblock-android-benchmark/: build.gradle
docker/: Dockerfile  (+2 more)
hermes-engine/: CMakeLists.txt  build.gradle
hermes-engine/src/androidTest/java/org/adblockplus/android/: ApiInstrumentedTest.kt  CompatInstrumentedTest.kt  FileSystemInstrumentedTest.kt
hermes-engine/src/androidTest/java/org/adblockplus/hermes/: ApiInstrumentedTest.kt  CompatInstrumentedTest.kt  FileSystemInstrumentedTest.kt
hermes-engine/src/main/: AndroidManifest.xml
hermes-engine/src/main/assets/: easylist_minified.txt  patterns_mini.ini
hermes-engine/src/main/cpp/: Api.cpp  Api.h  DefaultFileSystem.cpp  DefaultFileSystem.h  Engine.cpp  Engine.h  GlobalJsObject.cpp  GlobalJsObject.h  IFileSystem.h  JSFunctionWrapper.cpp  JSFunctionWrapper.h  JsFileSystem.cpp  JsFileSystem.h  JsUtils.cpp  JsUtils.h  Log.cpp  Log.h  MappedFileBuffer.cpp  MappedFileStorage.cpp  MappedFileStorage.h  native-lib.cpp
hermes-engine/src/main/java/org/adblockplus/: AdblockEngine.java  AdblockEngineBuilder.java  AdblockEngineFactory.java  AdblockFilterBuilder.java  AdblockPlusException.java  AppInfo.java  AsyncAdblockEngineBuilder.java  ConnectionType.java  ContentType.java  EmulationSelector.java  Filter.java  HeaderEntry.java  HttpClient.java  HttpRequest.java  IsAllowedConnectionCallback.java  RecommendedSubscriptions.java  ServerResponse.java  Subscription.java
hermes-engine/src/main/java/org/adblockplus/android/: AdblockEngine.java  AdblockEngineBuilder.java  AdblockEngineProvider.java  AndroidBase64Processor.java  AndroidHttpClient.java  AndroidHttpClientResourceWrapper.java  ConnectionInputStream.java  EngineScheduler.java  IsAllowedConnectionCallbackImpl.java  JSFunctionWrapper.java  SingleInstanceEngineProvider.java  Utils.java
hermes-engine/src/main/java/org/adblockplus/hermes/: AdblockEngine.java  AdblockEngineSettings.java  ConnectionType.java  ContentType.java  EmulationSelector.java  Engine.java  EngineScheduler.java  Filter.java  JSFunctionWrapper.java  MatchesResult.java  Subscription.java
hermes-engine/src/main/java/org/adblockplus/security/: JavaSignatureVerifier.java  SignatureVerificationException.java  SignatureVerifier.java
hermes-engine/src/main/java/org/adblockplus/sitekey/: PublicKeyHolder.java  PublicKeyHolderImpl.java  SiteKeyException.java  SiteKeyVerifier.java  SiteKeysConfiguration.java
hermes-engine/src/main/java/org/adblockplus/util/: Base64Exception.java  Base64Processor.java
hermes-engine/src/sharedTest/java/org/adblockplus/android/: EngineTest.kt
(+605 files in other folders)
